@@ -1,3 +1,6 @@
+trunk (unreleased)
+- Treat VDI.epoch_{begin,end} as no-ops
+
 0.1.1 (17-Oct-2014)
 - Now daemonizes properly
 - Logs to syslog
